objects/ACR3__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>Evcxvcxvvcvc  creavcxvxcvxcvxcvxcted by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field1__c</fullName>
        <label>field1</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field2__c</fullName>
        <label>field2</label>
        <type>Email</type>
    </fields>
</CustomObject>